# atomvm_lib

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  component.mk  index.md  rebar.config
doc/: bh1750.md  bme280.md
examples/: httpd_example.erl  ledc_pwm_example.erl
examples/adc_example/: README.md
examples/application_example/: LICENSE  README.md  rebar.config
examples/bh1750_example/: README.md
examples/bme280_example/: README.md  rebar.config
examples/dht_example/: README.md
include/: httpd.hrl  ledc.hrl  logger.hrl  trace.hrl
markdown/: adc.md  bh1750.md  bme280.md  components.md  dht.md  gps.md  httpd.md  ledc_pwm.md  lora.md  mqtt_client.md  qrcodegen.md  sht3x.md  ssd1306.md
nifs/: atomvm_adc.c  atomvm_dht.c  atomvm_lib.c  atomvm_qrcodegen.c  atomvm_ssd1306.c
ports/: atomvm_gps.c  atomvm_mqtt_client.c  atomvm_socket.c
src/: adc.erl  api_handler.erl  atomvm_lib.app.src  atomvm_lib.erl  avm_application.erl  avm_application_controller.erl  avm_env.erl  bh1750.erl  bme280.erl  codec.erl  dht.erl  diag.erl  gen_tcp_server.erl  gps.erl  http_api_handler.erl  http_file_handler.erl  http_handler.erl  http_ws_handler.erl  httpd.erl  httpd_api_handler.erl  httpd_cmd_api_handler.erl  httpd_env_api_handler.erl  httpd_file_handler.erl  httpd_handler.erl  httpd_ota_handler.erl  httpd_stats_api_handler.erl  httpd_ws_handler.erl  i2c_bus.erl  init.erl  json_encoder.erl  ledc_pwm.erl  lora.erl  lora_node.erl  lora_sx126x.erl  lora_sx127x.erl  map_utils.erl  mqtt_client.erl  mqtt_simulator.erl  qrcodegen.erl  rational.erl  (+4 more)
(+64 files in other folders)
